--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,12 @@
 [Console]
 console_wd = 80
-    # integer greater-than 60
+    # integer greater-than 60, console's width in letter-width
 console_ht = 25
-    # integer
-console_move_x = 2560
-    # integer, # of pixels to move the console window by. If positive, window will move to the right; if negative, window will move left)
+    # integer, console's height in letter-height
+console_x = 2860
+    # integer, console's X position on screen in pixels
+console_y = 15
+    # inteter, console's Y position on screen in pixels
 
 [Convert Video]
 file_types = 
@@ -27,35 +29,39 @@ ffmpeg_crf_values =
     1500:19
     2000:15
     # frame_height:crf_value
+duration_mismatch_allow = 2.5
+    # float > 0. When checking output vs input duration, the difference in seconds (+/-) that will not throw an error
 
 [Default Options]
+playtime_cutoff = 180
+    # positive integer (seconds). If output format is 'Auto', a video shorter than this playtime will be converted to webm. Above, to mkv if there are subtitles or mp4 if not
 aud_stream_langs = 
     jpn:Japanese
     eng:English
     # code:language. List of ISO 639-2 language codes with their name. First listed will be the default
 sub_stream_langs = 
     eng:English
-    jpn:Japanes
     # code:language. List of ISO 639-2 language codes with their name. First listed will be the default
 stream_count = 5
     # positive, non-zero integer. The number of video/audio/subtitle streams to pick from
-overwrite_original = no
+recurse_folders = yes
+    # yes/no. Whether to recurse into subfolders (if applicable)
+overwrite_original = yes
     # yes/no. Whether to overwrite the original video with the new version
-scale_video = no
-    # yes/no. Whether to scale the video to 720p
-crop_blackspace = no
-    # yes/no. Whether to crop blackspace using ffmpeg 'cropdetect' (may misbehave; recommended to only use without overwrite_original selected)
 keep_failures = no
     # yes/no. Whether to keep output files that have not reduced in size
 overwrite_failures = no
     # yes/no. Whether to overwrite the original with a compression failure (only applicable if "overwrite_original = yes" AND "keep_failures = yes")
-keep_errors = no
+keep_errors = yes
     # yes/no. Whether to keep output files that have errors in their processing
-recurse_folders = yes
-    # yes/no. Whether to recurse into subfolders (if applicable)
-playtime_cutoff = 180
-    # positive integer (seconds). If output format is 'Auto', a video shorter than this playtime will be converted to webm. Above, to mkv if there are subtitles or mp4 if not
+scale_video = no
+    # yes/no. Whether to scale the video to 720p
+crop_blackspace = no
+    # yes/no. Whether to crop blackspace using ffmpeg 'cropdetect' (may misbehave; recommended to only use without overwrite_original selected)
+rename_output = yes
+    # yes/no. Whether to remove text from the output filename using regex
+rename_regex = " ?(\[|\().+?(\]|\)) ?"
 thread_count = 3
     # positive, non-zero integer. If using hevc_nvenc, max is 5
-add_params = -rc-lookahead 10 -metadata title=
+add_params = "-rc-lookahead 10 -metadata title="
     # any parameters to add to the end of the final ffmpeg command. Can be left blank
