--- a/config.ini
+++ b/config.ini
@@ -61,7 +61,9 @@ crop_blackspace = no
 rename_output = yes
     # yes/no. Whether to remove text from the output filename using regex
 rename_regex = " ?(\[|\().+?(\]|\)) ?"
-thread_count = 3
+rename_to = ""
+    # rename_regex is the regex string to search for within the filename, rename_to is what the match will be changed to
+thread_count = 2
     # positive, non-zero integer. If using hevc_nvenc, max is 5
-add_params = "-rc-lookahead 10 -metadata title="
+add_params = "-rc-lookahead 10 -metadata title= -metadata comment="
     # any parameters to add to the end of the final ffmpeg command. Can be left blank
