added simple option to ignore one of the common and usually benign errors (invalid dts)

--- a/config.ini
+++ b/config.ini
@@ -31,6 +31,8 @@ ffmpeg_crf_values =
     # frame_height:crf_value
 duration_mismatch_allow = 2.5
     # float > 0. When checking output vs input duration, the difference in seconds (+/-) that will not throw an error
+ignore_invalid_dts = yes
+    # yes/no. Ignores the ffmpeg error "Application provided invalid, non monotonically increasing dts to muxer in stream", which is almost always not an issue
 
 [Default Options]
 playtime_cutoff = 180
