default remove chapters

--- a/config.ini
+++ b/config.ini
@@ -67,5 +67,5 @@ rename_to = ""
     # rename_regex is the regex string to search for within the filename, rename_to is what the match will be changed to
 thread_count = 2
     # positive, non-zero integer. If using hevc_nvenc, max is 5
-add_params = "-rc-lookahead 10 -metadata title= -metadata comment="
+add_params = "-rc-lookahead 10 -metadata title= -metadata comment= -map_chapters -1"
     # any parameters to add to the end of the final ffmpeg command. Can be left blank
